<resources>
    <string name="app_name">Easy Shopping</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_screen">Welcome to this screen !!!</string>
    <string name="search_items">Search Items</string>
    <string name="action_register">Register</string>
    <string name="retry">Retry</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="current_link">Current Link :</string>
    <string name="links_count">Links count :</string>
    <string name="enter_url">Enter URL</string>
    <string name="search">Search</string>
    <string name="processed_links_count">Processed links count :</string>
    <string name="menu_settings">Settings</string>
    <string name="history">History</string>
    <string name="menu_signout">Sign Out</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_feedback">Feed Back</string>
    <string name="cancle_text">Cancel</string>
    <string name="feedback">Provide Your Feedback</string>
    <string name="name">Enter Name</string>
    <string name="email">Enter Email</string>
    <string name="city">Enter City Name</string>
    <string name="message">Enter Message</string>
    <string name="faq">FAQ</string>
    <string name="list_view">List Videw</string>
    <string name="select_city">Select City</string>
    <string name="select_category">Select Category</string>
    <string name="select_subcategory">Select SubCategory</string>
    <string name="no_history_found">Sorry, No History Found</string>

    <string-array name="cities">
        <item>Select City</item>
        <item>Islamabad</item>
        <item>Rawalpindi</item>
        <item>Lahore</item>
        <item>Karachi</item>
        <item>Faisalabad</item>
        <item>Quetta</item>
        <item>Peshawar</item>
    </string-array>
</resources>
