<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#8496FA"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:id="@+id/newtext"
        android:background="#0E0D0D"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/feedback"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:layout_below="@id/newtext"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:text="@string/name"
        android:textColor="@android:color/black"
        />

    <EditText
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginTop="-16dp"
        android:gravity="left"
        android:hint="enter your name"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:layout_below="@id/edit1"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/email"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginTop="-16dp"
        android:gravity="left"
        android:hint="enter you email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:layout_below="@id/edit2"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/city"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/edit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit2"
        android:layout_marginTop="51dp"
        android:gravity="left"
        android:hint="enter your city name"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:layout_below="@id/edit3"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/message"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/edit4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text4"
        android:layout_marginTop="-17dp"
        android:gravity="left"
        android:hint="enter your city name"
        android:inputType="textLongMessage"
        android:maxLength="190"
        android:textColor="@android:color/white"
        android:textSize="20dp" />
    <RatingBar
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:layout_below="@id/edit4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <Button
        android:id="@+id/Button"
        android:layout_width="match_parent"
        android:layout_below="@id/rate"
        android:layout_height="50dp"
        android:background="#F6A630"
        android:text="Submit"
        android:textStyle="bold"
        android:textSize="20dp"
        android:onClick="onclick"
        android:textColor="@color/colorWhite" />
</RelativeLayout>